--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0",
+    "postcss": "^8.0.9",
+    "postcss-custom-media": "^7.0.8",
+    "postcss-nested": "^4.2.3",
     "prettier": "^2.2.1",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2"
