--- a/package.json
+++ b/package.json
@@ -35,8 +35,6 @@
     "postcss-nested": "^4.2.3",
     "prettier": "^2.2.1",
     "sass": "^1.26.5",
-    "sass-loader": "^8.0.2",
-    "vue-svg-loader": "^0.17.0-beta.2",
-    "vue-template-compiler": "2.6.11"
+    "sass-loader": "^8.0.2"
   }
 }
